fix(featured services):contrast text-bg brightness

--- a/src/scss/blocks/_featured-services.scss
+++ b/src/scss/blocks/_featured-services.scss
@@ -8,7 +8,7 @@
         height: 15rem;
         object-fit: cover;
         z-index: 0;
-        filter: grayscale(100%) brightness(0.8);
+        filter: grayscale(100%) brightness(0.5);
       }
       p {
         position: absolute;
